tests/error/inout_errors/shadow_if.err
Error: Borrow shadowed (at $FILE:13:8)
   | 
11 | def test(q: qubit, b: bool) -> None:
12 |     if b:
13 |         q = qubit()
   |         ^ Assignment shadows borrowed argument `q`

Help: Consider assigning to a different name

Guppy compilation failed due to 1 previous error
